--- a/smart_classroom/package.json
+++ b/smart_classroom/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,8 +14,10 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-miui": "^0.18.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
